# amplifier-toolkit

./: .gitignore  README.md  bundle.md
bundles/deliberate-development/: bundle.md
bundles/deliberate-development/agents/: deliberate-debugger.md  deliberate-implementer.md  deliberate-planner.md  deliberate-reviewer.md
bundles/deliberate-development/behaviors/: planning-mode.yaml
bundles/deliberate-development/context/: DELIBERATE_PHILOSOPHY.md  ISSUE_HANDLING.md  REVIEW_PRINCIPLES.md  planning-mode-instructions.md
bundles/deliberate-development/docs/: README.md
bundles/deliberate-development/recipes/: code-review-prep.yaml  deliberate-design.yaml  deliberate-review.yaml  feature-development.yaml  issue-resolution.yaml  learning-exploration.yaml  quick-design.yaml  refactor-workflow.yaml  spike-investigation.yaml
bundles/deliberate-development/tests/: TEST_REVIEW_NOTES.md  conftest.py  test_recipe_execution.py  test_recipe_structure.py
bundles/deliberate-development/tests/fixtures/sample-project/: README.md
bundles/deliberate-development/tests/fixtures/sample-project/src/: main.py
bundles/deliberate-development/tests/mocks/: agent_responses.py
bundles/looper/: README.md  bundle.md  pyproject.toml
bundles/looper/agents/: supervisor.md
bundles/looper/looper/: __init__.py  cli.py  orchestrator.py  tool.py
bundles/m365-collab/: bundle.yaml
bundles/m365-collab/behaviors/: m365-collab.yaml
bundles/m365-collab/context/: m365-collaboration.md
bundles/my-amplifier/: DEPRECATED.md  bundle.md
bundles/my-amplifier/context/: user-habits.md
bundles/session-discovery/: README.md  bundle.md
bundles/session-discovery/agents/: session-namer.md
bundles/session-discovery/behaviors/: session-discovery.yaml
bundles/session-discovery/context/: session-discovery-awareness.md
bundles/session-discovery/modules/hook-session-indexer/: pyproject.toml
bundles/session-discovery/modules/hook-session-indexer/amplifier_module_hook_session_indexer/: __init__.py
bundles/task-iteration/: README.md  bundle.md
bundles/task-iteration/agents/: task-builder.md  task-validator.md
bundles/task-iteration/recipes/: task-iteration-loop.yaml
examples/continuous-code-review/: 23_continuous_code_review.py  README.md
recipes/: antagonist-design-validator.yaml  antagonist-test-validator.yaml  antagonistic-verification-with-fixes.yaml  antagonistic-verification.yaml  feature-workflow.yaml  large-scale-project-recipe.yaml  session-digest.yaml
scripts/session-manager/: README.md  amp-restore-sessions  amp-save-sessions  amp-sessions-README.md  amp-sessions-setup  amp-working-on
skills/: PROJECT-MGMT-README.md  code-field.md  project-mgmt.md
tools/amplifier-swarm/: .gitignore  EXAMPLE.md  FIXES_COMPLETED.md  README.md  pyproject.toml
tools/amplifier-swarm/src/amplifier_swarm/: __init__.py  cli.py  dashboard.py  database.py  migrate.py  orchestrator.py  worker.py
tools/amplifier-swarm/static/: dashboard.html
tools/m365-collab/: README.md  pyproject.toml
tools/m365-collab/amplifier_module_tool_m365_collab/: __init__.py
tools/m365-collab/m365_collab/: __init__.py
tools/m365-collab/src/m365_collab/: __init__.py  config.py  tool.py
tools/playwright-testing-tools/: README.md  package-lock.json  package.json
tools/playwright-testing-tools/src/: assertSemantic.ts  assertStructure.ts  assertVisual.ts  index.ts
tools/voice-bridge/: README.md  standalone_server.py
tools/voice-bridge/src/amplifier_voice_bridge/: __init__.py  amplifier_bridge.py  cli.py  command_handler.py  models.py  server.py  session_discovery.py  session_manager.py  voice_commands.py
