[project]
name = "looper"
version = "0.1.0"
description = "Supervised work loop for Amplifier - keeps working until done"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sam Schillace" }
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
amplifier = [
    "amplifier-core",
    "amplifier-foundation",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
looper = "looper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["looper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
