[project]
name = "amplifier-tool-m365-collab"
version = "0.1.0"
description = "M365 SharePoint-based agent collaboration tool for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m365_collab"]

[project.entry-points."amplifier.tools"]
m365_collab = "m365_collab:M365CollabTool"
