[project]
name = "amplifier-module-tool-m365-collab"
version = "0.1.0"
description = "M365 SharePoint collaboration tool for Amplifier agents"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.26.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["m365_collab"]
