[project]
name = "amplifier-module-tool-m365-collab"
version = "0.1.0"
description = "M365 SharePoint collaboration tool for Amplifier agents"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.26.0",
    "httpx>=0.27.0",
]

[project.entry-points."amplifier.modules"]
tool-m365-collab = "amplifier_module_tool_m365_collab:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_m365_collab"]
